--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -38,6 +38,10 @@
             {% include 'multibar.html' %}
           </div>
         </nav>
+        <!-- PLAYER -->
+        <div class="container" id="player-drop">
+          {% include 'player.html' %}
+        </div>
       </div>
       <!-- MAIN -->
       <div class="container"id="main">
@@ -80,9 +84,6 @@
           {% endif %}
         </div>
       </div>
-    </div>
-    <!-- PLAYER -->
-    <div class="container-fluid fixed-bottom" id="player-drop">
     </div>
     <!--FOOTER-->
     <footer class="footer">
