--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -10,7 +10,7 @@ Listen to episodes of {{ podcast.title }} on dopepod
       <div class="row" id="podinfo-main">
         <div class="col-4" id="podinfo-left">
           <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}300x300bb.jpg&w=300&h=300&t=absolute" />
-          <ul class="podinfo-side-list d-block d-lg-none">
+          <ul class="podinfo-side-list color-5-trans d-block d-lg-none">
             {% if podcast.global_rank %}
               <li>
                 <span class="global_rank">
