--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -37,7 +37,7 @@ dopepod
                     <input class="form-control login-field" type="password" name="password" placeholder="Password" required id="login-password">
                   </div>
                   <div class="col-auto">
-                    <button type="submit" class="btn btn-dope login-button">Login</button>
+                    <button type="submit" class="btn btn-dope login-button">Log in</button>
                   </div>
                 </div>
                 <div class="form-row">
@@ -57,34 +57,34 @@ dopepod
             </div>
             <div class="tab-pane fade show active" id="tabs-signup" role="tabpanel" aria-labelledby="signup-tab">
               {% if errors.general %}
-                <span class="error-message">
+                <div class="error-message">
                   {{ errors.general }}
-                </span>
+                </div>
               {% endif %}
               <form class="signup-form" method="POST" action="{% url 'signup' %}">
                 {% csrf_token %}
                 {% if errors.email %}
-                  <span class="error-message">
+                  <div class="error-message">
                     {{ errors.email }}
-                  </span>
+                  </div>
                 {% endif %}
                 <div class="login-form-group">
                   <label class="sr-only" for="signup-email">Email</label>
                   <input class="form-control login-field" type="email" name="email" size="30" placeholder="Email" required id="signup-email">
                 </div>
                 {% if errors.password1 %}
-                  <span class="error-message">
+                  <div class="error-message">
                     {{ errors.password1 }}
-                  </span>
+                  </div>
                 {% endif %}
                 <div class="login-form-group">
                   <label class="sr-only" for="signup-password1">Password</label>
                   <input class="form-control login-field" type="password" name="password1" placeholder="Password" required id="signup-password1">
                 </div>
                 {% if errors.password2 %}
-                <span class="error-message">
+                <div class="error-message">
                   {{ errors.password2 }}
-                </span>
+                </div>
                 {% endif %}
                 <div class="form-row">
                   <div class="col login-form-group">
@@ -92,7 +92,7 @@ dopepod
                     <input class="form-control login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
                   </div>
                   <div class="col-auto">
-                    <button type="submit" class="btn btn-dope signup-button">Signup</button>
+                    <button type="submit" class="btn btn-dope signup-button">Sign Up</button>
                   </div>
                 </div>
               </form>
@@ -130,25 +130,25 @@ dopepod
             </div>
             <div class="tab-pane fade show active" id="tabs-login" role="tabpanel" aria-labelledby="login-tab">
               {% if errors.general %}
-                <span class="error-message">
+                <div class="error-message">
                   {{ errors.general }}
-                </span>
+                </div>
               {% endif %}
               <form class="login-form" method="POST" action="{% url 'login' %}">
                 {% csrf_token %}
                 {% if errors.email %}
-                  <span class="error-message">
+                  <div class="error-message">
                     {{ errors.email }}
-                  </span>
+                  </div>
                 {% endif %}
                 <div class="login-form-group">
                   <label class="sr-only" for="login-login">Email</label>
                   <input class="form-control login-field" type="text" name="login" placeholder="Email" autofocus="autofocus" required id="login-login" value="{{ email }}">
                 </div>
                 {% if errors.password %}
-                <span class="error-message">
+                <div class="error-message">
                   {{ errors.password }}
-                </span>
+                </div>
                 {% endif %}
                 <div class="form-row">
                   <div class="col login-form-group">
@@ -156,7 +156,7 @@ dopepod
                     <input class="form-control login-field" type="password" name="password" placeholder="Password" required id="login-password">
                   </div>
                   <div class="col-auto">
-                    <button type="submit" class="btn btn-dope login-button">Login</button>
+                    <button type="submit" class="btn btn-dope login-button">Log in</button>
                   </div>
                 </div>
                 <div class="form-row">
@@ -191,7 +191,7 @@ dopepod
                     <input class="form-control login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
                   </div>
                   <div class="col-auto">
-                    <button type="submit" class="btn btn-dope signup-button">Signup</button>
+                    <button type="submit" class="btn btn-dope signup-button">Sign up</button>
                   </div>
                 </div>
               </form>
@@ -240,7 +240,7 @@ dopepod
                     <input class="form-control login-field" type="password" name="password" placeholder="Password" required id="login-password">
                   </div>
                   <div class="col-auto">
-                    <button type="submit" class="btn btn-dope login-button">Login</button>
+                    <button type="submit" class="btn btn-dope login-button">Log in</button>
                   </div>
                 </div>
                 <div class="form-row">
@@ -275,7 +275,7 @@ dopepod
                     <input class="form-control login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
                   </div>
                   <div class="col-auto">
-                    <button type="submit" class="btn btn-dope signup-button">Signup</button>
+                    <button type="submit" class="btn btn-dope signup-button">Sign up</button>
                   </div>
                 </div>
               </form>
@@ -285,16 +285,16 @@ dopepod
                 Forgot your password? Enter your email address below, and we'll send you an email with a link allowing you to reset it.
               </p>
               {% if errors.general %}
-                <span class="error-message">
+                <div class="error-message">
                   {{ errors.general }}
-                </span>
+                </div>
               {% endif %}
               <form class="password-form" method="POST" action="{% url 'password_reset' %}">
                 {% csrf_token %}
                 {% if errors.email %}
-                  <span class="error-message">
+                  <div class="error-message">
                     {{ errors.email }}
-                  </span>
+                  </div>
                 {% endif %}
                 <div class="form-row">
                   <div class="col login-form-group">
@@ -334,7 +334,7 @@ dopepod
                     <input class="form-control login-field" type="password" name="password" placeholder="Password" required id="login-password">
                   </div>
                   <div class="col-auto">
-                    <button type="submit" class="btn btn-dope login-button">Login</button>
+                    <button type="submit" class="btn btn-dope login-button">Log in</button>
                   </div>
                 </div>
                 <div class="form-row">
@@ -369,7 +369,7 @@ dopepod
                     <input class="form-control login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
                   </div>
                   <div class="col-auto">
-                    <button type="submit" class="btn btn-dope signup-button">Signup</button>
+                    <button type="submit" class="btn btn-dope signup-button">Sign up</button>
                   </div>
                 </div>
               </form>
@@ -400,73 +400,73 @@ dopepod
         {% if view == 'signup' %}
           {% if request.is_ajax %}
             <a class="btn btn-dope login-link login-toggle" id="login-tab" data-toggle="pill" href="#tabs-login" role="tab" aria-controls="tabs-login" aria-selected="false">
-              Login
+              Log in
             </a>
             or
             <a class="btn btn-dope active signup-link login-toggle" id="signup-tab" data-toggle="pill" href="#tabs-signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
-              Signup
+              Sign up
             </a>
           {% else %}
             <a class="btn btn-dope login-link login-toggle" id="login-tab" data-toggle="pill" href="/?view=login" role="tab" aria-controls="tabs-login" aria-selected="false">
-              Login
+              Log in
             </a>
             or
             <a class="btn btn-dope active signup-link login-toggle" id="signup-tab" data-toggle="pill" href="/?view=signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
-              Signup
+              Sign up
             </a>
           {% endif %}
         {% elif view == 'login' %}
           {% if request.is_ajax %}
             <a class="btn btn-dope active login-link login-toggle" id="login-tab" data-toggle="pill" href="#tabs-login" role="tab" aria-controls="tabs-login" aria-selected="false">
-              Login
+              Log in
             </a>
             or
             <a class="btn btn-dope signup-link login-toggle" id="signup-tab" data-toggle="pill" href="#tabs-signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
-              Signup
+              Sign up
             </a>
           {% else %}
             <a class="btn btn-dope active login-link login-toggle" id="login-tab" data-toggle="pill" href="?view=login" role="tab" aria-controls="tabs-login" aria-selected="false">
-              Login
+              Log in
             </a>
             or
             <a class="btn btn-dope signup-link login-toggle" id="signup-tab" data-toggle="pill" href="/?view=signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
-              Signup
+              Sign up
             </a>
           {% endif %}
         {% elif view == 'password' %}
           {% if request.is_ajax %}
             <a class="btn btn-dope login-link login-toggle" id="login-tab" data-toggle="pill" href="#tabs-login" role="tab" aria-controls="tabs-login" aria-selected="false">
-              Login
+              Log in
             </a>
             or
             <a class="btn btn-dope signup-link login-toggle" id="signup-tab" data-toggle="pill" href="#tabs-signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
-              Signup
+              Sign up
             </a>
           {% else %}
             <a class="btn btn-dope login-link login-toggle" id="login-tab" data-toggle="pill" href="?view=login" role="tab" aria-controls="tabs-login" aria-selected="false">
-              Login
+              Log in
             </a>
             or
             <a class="btn btn-dope signup-link login-toggle" id="signup-tab" data-toggle="pill" href="/?view=signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
-              Signup
+              Sign up
             </a>
           {% endif %}
         {% else %}
           {% if request.is_ajax %}
             <a class="btn btn-dope login-link login-toggle" id="login-tab" data-toggle="pill" href="#tabs-login" role="tab" aria-controls="tabs-login" aria-selected="false">
-              Login
+              Log in
             </a>
             or
             <a class="btn btn-dope signup-link login-toggle" id="signup-tab" data-toggle="pill" href="#tabs-signup" role="tab" aria-controls="tabs-signup" aria-selected="false">
-              Signup
+              Sign up
             </a>
           {% else %}
             <a class="btn btn-dope login-link login-toggle" id="login-tab" data-toggle="pill" href="?view=login" role="tab" aria-controls="tabs-login" aria-selected="false">
-              Login
+              Log in
             </a>
             or
             <a class="btn btn-dope signup-link login-toggle" id="signup-tab" data-toggle="pill" href="/?view=signup" role="tab" aria-controls="tabs-signup" aria-selected="false">
-              Signup
+              Sign up
             </a>
           {% endif %}
         {% endif %}
