--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -50,7 +50,7 @@
         {% else %}
         <div class="row collapse" id="browse-collapse">
         {% endif %}
-          <div class="alphabet-group alphabet-buttons">
+          <div class="col alphabet-group alphabet-buttons">
             {% for letter in alphabet %}
             <a class="btn btn-dope alphabet-button" href="/browse/?q={{ letter }}" id="alphabet-{{ letter }}">
               <span>
