--- a/index/static/style.css
+++ b/index/static/style.css
@@ -606,8 +606,10 @@ body {
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  justify-content: center;
   padding: 10px 4px 6px 10px;
   width: 320px;
+  margin: auto;
 }
 .alphabet-buttons {
 }
@@ -615,7 +617,7 @@ body {
   display: block;
   text-align: center;
   font-weight: 600;
-  width: 28px;
+  width: 30px;
   padding: .25rem .25rem;
   margin-bottom: 4px;
   margin-right: 4px;
@@ -623,9 +625,7 @@ body {
 
 /* MULTI BAR */
 #multibar {
-  padding: 0;
-  padding-top: 4px;
-  padding-bottom: 4px;
+  padding: 4px 0;
   min-height: 44px;
   -webkit-box-shadow: rgba(0,0,0,.5) 0 2px 3px;
   -moz-box-shadow: rgba(0,0,0,.5) 0 2px 3px;
@@ -639,7 +639,7 @@ body {
 #multibar-l {
   min-width: 100px;
   height: 36px;
-  padding-left: 100px;
+  padding-left: 85px;
   padding-right: 0;
   display: inline-flex;
 }
@@ -754,7 +754,7 @@ body {
 }
 #login-wrapper {
   padding: 10px 10px 0;
-  max-width: 330px;
+  max-width: 300px;
   min-height: 170px;
   margin: auto;
 }
@@ -953,14 +953,22 @@ body {
 .results-header .dummy {
   width: 100px;
 }
+.results-header .header {
+  font-size: 20px;
+  min-width: 100px;
+}
+.results-header a {
+  margin-left: 4px;
+  margin-bottom: 4px;
+  float: right;
+}
 .results-collapse.show {
     display: flex;
 }
 .results-options {
   margin-bottom: 10px;
   margin-left: auto;
-  -ms-flex-item-align: end!important;
-  align-self: flex-end!important;
+  text-align: end;
 }
 .options-select {
   overflow: hidden;
@@ -987,7 +995,7 @@ body {
   color: rgba(45,43,43,1);
 }
 .view-button {
-  width: 36px;
+  min-width: 36px;
 }
 .results-minimize {
 }
