--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="col-auto col-md-4" id="navbar-l">
-  <a class="nav-link-dope d-inline-block d-lg-none" href="#" id="navbar-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <a class="nav-link-dope d-inline-block d-lg-none multibar-options-toggle" href="#multibar-options-collapse" data-toggle="collapse" aria-expanded="true" aria-controls="multibar-options-collapse">
     <i class="fas fa-bars icon"></i>
   </a>
 </div>
